[gd_scene load_steps=5 format=3 uid="uid://ckjr4nvparyny"]

[ext_resource type="Script" uid="uid://cmsro3yf5sr10" path="res://scripts/UI/PauseMenu.gd" id="1_fsae6"]
[ext_resource type="FontFile" uid="uid://ykfyqbu8t5q7" path="res://assets/fonts/Pixel Digivolve.otf" id="2_6q0ex"]
[ext_resource type="AudioStream" uid="uid://c1s2mmiart6hm" path="res://assets/sounds/button-confirmation.ogg" id="3_avwb0"]
[ext_resource type="AudioStream" uid="uid://ctdnqcf3jqb0m" path="res://assets/sounds/select-button-ui-395763.wav" id="4_73e60"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_fsae6")

[node name="TextureRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.588235)

[node name="MarginContainer" type="MarginContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 350
theme_override_constants/margin_top = 150
theme_override_constants/margin_right = 350
theme_override_constants/margin_bottom = 150

[node name="TextureRect" type="TextureRect" parent="TextureRect/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/MarginContainer/TextureRect"]
layout_mode = 2
offset_right = 452.0
offset_bottom = 348.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="TextureRect/MarginContainer/TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_6q0ex")
theme_override_font_sizes/font_size = 50
text = "Jogo Pausado"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="TextureRect/MarginContainer/TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="ResumeButton" type="Button" parent="TextureRect/MarginContainer/TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_6q0ex")
text = "Continuar"

[node name="RestartButton" type="Button" parent="TextureRect/MarginContainer/TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_6q0ex")
text = "Recome√ßar Fase"

[node name="QuitToMapButton" type="Button" parent="TextureRect/MarginContainer/TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_6q0ex")
text = "Sair para o mapa"

[node name="confirm" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_avwb0")

[node name="hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_73e60")

[connection signal="mouse_entered" from="TextureRect/MarginContainer/TextureRect/VBoxContainer/ResumeButton" to="." method="_on_resume_button_mouse_entered"]
[connection signal="pressed" from="TextureRect/MarginContainer/TextureRect/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="TextureRect/MarginContainer/TextureRect/VBoxContainer/ResumeButton" to="." method="_on_retomar_pressionado"]
[connection signal="mouse_entered" from="TextureRect/MarginContainer/TextureRect/VBoxContainer/RestartButton" to="." method="_on_restart_button_mouse_entered"]
[connection signal="pressed" from="TextureRect/MarginContainer/TextureRect/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="TextureRect/MarginContainer/TextureRect/VBoxContainer/RestartButton" to="." method="_on_reiniciar_pressionado"]
[connection signal="mouse_entered" from="TextureRect/MarginContainer/TextureRect/VBoxContainer/QuitToMapButton" to="." method="_on_quit_to_map_button_mouse_entered"]
[connection signal="pressed" from="TextureRect/MarginContainer/TextureRect/VBoxContainer/QuitToMapButton" to="." method="_on_sair_pressionado"]
[connection signal="pressed" from="TextureRect/MarginContainer/TextureRect/VBoxContainer/QuitToMapButton" to="." method="_on_quit_to_map_button_pressed"]
